--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,4 @@
-$main-color: linear-gradient(80deg, rgb(1, 6, 40) 0%, rgb(3, 21, 133) 90%);
+@import "responsive";
 
 * {
   box-sizing: border-box;
